// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewExplorerLink.vue Should display a new link form 1`] = `
<div>
  <div class="row">
    <div class="col col-4">
      <div class="v-input v-input--has-state v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined error--text">
        <div class="v-input__control">
          <div class="v-input__slot">
            <fieldset aria-hidden="true">
              <legend style="width: 0px;"><span class="notranslate">​</span></legend>
            </fieldset>
            <div class="v-text-field__slot"><label for="input-4" class="v-label theme--light error--text" style="left: 0px; position: absolute;">URL *</label><input small="" id="input-4" type="text"></div>
          </div>
          <div class="v-text-field__details">
            <div class="v-messages theme--light error--text" role="alert">
              <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="col col-4">
      <div class="v-input v-input--has-state v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined error--text">
        <div class="v-input__control">
          <div class="v-input__slot">
            <fieldset aria-hidden="true">
              <legend style="width: 0px;"><span class="notranslate">​</span></legend>
            </fieldset>
            <div class="v-text-field__slot"><label for="input-7" class="v-label theme--light error--text" style="left: 0px; position: absolute;">Name *</label><input small="" id="input-7" type="text"></div>
          </div>
          <div class="v-text-field__details">
            <div class="v-messages theme--light error--text" role="alert">
              <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="col col-4">
      <v-autocomplete-stub errorcount="1" errormessages="" messages="" rules="" successmessages="" appendicon="" backgroundcolor="" dense="true" label="Icon" persistenthint="true" loaderheight="2" clearicon="$clear" outlined="true" type="text" valuecomparator="[Function]" nodatatext="$vuetify.noDataText" items="" itemcolor="primary" itemdisabled="disabled" itemtext="name" itemvalue="[Function]" menuprops="[object Object]" autoselectfirst="true" filter="[Function]" hidenodata="true" nofilter="true" small=""><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--small"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light error--text"></i></span></button></v-autocomplete-stub>
    </div>
  </div>
</div>
`;

exports[`NewExplorerLink.vue Should display an existing link form 1`] = `
<div>
  <div class="row">
    <div class="col col-4">
      <div class="v-input v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined">
        <div class="v-input__control">
          <div class="v-input__slot">
            <fieldset aria-hidden="true">
              <legend style="width: -24px;"><span class="notranslate">​</span></legend>
            </fieldset>
            <div class="v-text-field__slot"><label for="input-17" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">URL *</label><input small="" id="input-17" type="text"></div>
          </div>
          <div class="v-text-field__details">
            <div class="v-messages theme--light">
              <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="col col-4">
      <div class="v-input v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined">
        <div class="v-input__control">
          <div class="v-input__slot">
            <fieldset aria-hidden="true">
              <legend style="width: -24px;"><span class="notranslate">​</span></legend>
            </fieldset>
            <div class="v-text-field__slot"><label for="input-20" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Name *</label><input small="" id="input-20" type="text"></div>
          </div>
          <div class="v-text-field__details">
            <div class="v-messages theme--light">
              <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="col col-4">
      <v-autocomplete-stub errorcount="1" errormessages="" messages="" rules="" successmessages="" appendicon="mdi-twitter" backgroundcolor="" dense="true" label="Icon" persistenthint="true" loaderheight="2" clearicon="$clear" outlined="true" type="text" valuecomparator="[Function]" nodatatext="$vuetify.noDataText" items="[object Object]" itemcolor="primary" itemdisabled="disabled" itemtext="name" itemvalue="[Function]" menuprops="[object Object]" autoselectfirst="true" filter="[Function]" hidenodata="true" nofilter="true" small="" value="mdi-twitter"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--small"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light error--text"></i></span></button></v-autocomplete-stub>
    </div>
  </div>
</div>
`;
